--- a/package.json
+++ b/package.json
@@ -46,5 +46,6 @@
     "autoprefixer": "^9",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
-  }
+  },
+  "proxy": "https://online-test-api.achilles.systems"
 }
